# sandwich-maker

./: .gitignore  README.md
.github/workflows/: ci.yaml
bot/: Cargo.toml  README.md
bot/crates/artemis-core/: Cargo.toml
bot/crates/artemis-core/src/collectors/: mevshare_collector.rs  mod.rs
bot/crates/strategy/: Cargo.toml
bot/crates/strategy/src/: types.rs
bot/crates/strategy/src/bot/: mod.rs
bot/crates/strategy/src/managers/: mod.rs  pool_manager.rs  sandwich_state_manager.rs
bot/crates/strategy/src/simulator/: huff_sandwich.rs  lil_router.rs  mod.rs  salmonella_inspector.rs
bot/crates/strategy/src/tx_utils/: mod.rs
bot/crates/strategy/tests/: main.rs
bot/sandwich-bin/: Cargo.toml
bot/sandwich-bin/src/: config.rs  initialization.rs  main.rs
contract/: LICENSE  README.md  foundry.toml
contract/src/: LilRouter.sol  sando.huff  sandwich.huff
contract/test/: LilRouter.t.sol  Sandwich.t.sol
contract/test/misc/: SandwichCommon.sol  V2SandwichUtility.sol  V3SandwichUtility.sol
