[package]
authors = ["phureewat29 <https://github.com/phureewat29>"]
description = "Optimized sandwich bot written using Rust and Huff"
edition = "2021"
homepage = "https://github.com/phureewat29/sandwich-maker"
keywords = ["Ethereum", "Mev", "Dex", "Sandwich"]
license = "MIT"
name = "sandwich-maker"
readme = "README.md"
repository = "https://github.com/phureewat29/sandwich-maker"
version = "0.1.0"

[dependencies]
anyhow = "1.0.71"
dashmap = "5.4.0"
dotenv = "0.15.0"
futures = "0.3.5"
hashbrown = "0.14.0"
hex = "0.4.3"
log = "0.4.17"
reqwest = "0.11.12"
serde = "1.0.145"
thiserror = "1.0.37"
tokio = {version = "1.29.0", features = ["full"]}
url = "2.3.1"

# EVM based crates
cfmms = "0.6.2"
ethers = {version = "2.0.7", features = ["abigen", "ws"]}
ethers-flashbots = {git = "https://github.com/onbjerg/ethers-flashbots"}
revm = "3.3.0"

# logging
chrono = "0.4.23"
colored = "2.0.0"
fern = {version = "0.6.2", features = ["colored"]}
indoc = "2"

# artemis related
artemis-core = {path = "../crates/artemis-core"}
strategy = {path = "../crates/strategy"}
